<resources>
    <string name="app_name">Woodstock</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Configurações</string>

    // Menu tittle items
    <string name="menu_home">Home</string>
    <string name="menu_client">Clientes</string>
    <string name="menu_estoque">Estoque</string>
    <string name="menu_solicitacoes">Solicitações de Compra</string>
    <string name="menu_despesas">Despesas</string>
    <string name="menu_user_edit">Usuário</string>
    <string name="menu_user_logout">Sair</string>

    // Client Form
    <string name="client_form_hint_name">Nome</string>
    <string name="client_form_cpf_hint">CPF</string>
    <string name="client_form_telefone_hint">Telefone</string>
    <string name="client_form_email_hint">Email</string>

    <string name="salvar">Salvar</string>

    <string name="campo_obrigatorio">Este campo é obrigatório</string>

    <string name="budget_form_prazo_hint">Prazo de Entrega</string>
    <string name="budget_form_data_entrega_hint">Data de Entrega</string>
    <string name="budget_form_metodo_hint">Método de Pagamento</string>
    <string name="budget_form_cep_hint">CEP</string>
    <string name="budget_form_rua_hint">Rua</string>
    <string name="budget_form_cidade_hint">Cidade</string>
    <string name="budget_form_numero_hint">Número</string>
    <string name="budget_form_comp_hint">Complemento</string>
    <string-array name="state_array">
        <item>São Paulo</item>
        <item>Rio de Janeiro</item>
    </string-array>
    <string-array name="budget_status_array">
        <item>NEGOCIANDO</item>
        <item>FECHADO</item>
        <item>COMPLETO</item>
        <item>CANCELADO</item>
    </string-array>

    <string name="budgetitem_form_descricao_hint">Descrição</string>
    <string name="budgetitem_form_preco_hint">Preço</string>
    <string name="budgetitem_form_ambiente_hint">Ambiente</string>
    <string-array name="budgetitem_status_array">
        <item>ESPERANDO</item>
        <item>PRODUZINDO</item>
        <item>TERMINADO</item>
    </string-array>

    <string-array name="operating_type_array">
        <item>DESPESAS COM VEÍCULO</item>
        <item>MANUTENÇÃO</item>
        <item>SUPRIMENTOS</item>
        <item>CONTAS</item>
        <item>DESPESAS COM ESCRITÓRIO</item>
        <item>ALUGUEL</item>
        <item>SALÁRIO</item>
    </string-array>

    <string-array name="material_unit_array">
        <item>UN (Unidades)</item>
        <item>CT (Cartelas)</item>
        <item>CX (Caixas)</item>
        <item>PÇ (Peças)</item>
        <item>PR (Pares)</item>
        <item>PT (Pacotes)</item>
        <item>RL (Rolos)</item>
        <item>KG (Quilos)</item>
        <item>SC (Sacos)</item>
        <item>L (Litros)</item>
    </string-array>

    <string name="menu_users">Usuários</string>
    <string name="atualizar">Atualizar</string>

    <string-array name="user_status_array">
        <item>ATIVADO</item>
        <item>DESATIVADO</item>
    </string-array>

    <string-array name="user_type_array">
        <item>ADMIN</item>
        <item>MARCENEIRO</item>
        <item>ESTOQUISTA</item>
    </string-array>

</resources>