<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_action_fragment"
    android:background="?android:attr/windowBackground"
    tools:context=".ui.client.ClientActivity">
    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                android:src="@drawable/ic_client"
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/client_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/client_name"
                    android:hint="@string/client_form_hint_name"
                    android:maxLength="30"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/client_cpf_cnpj_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/client_cpf_cnpj"
                    android:hint="@string/client_form_cpf_hint"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                android:src="@drawable/ic_phone"
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/client_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/client_phone"
                    android:hint="@string/client_form_telefone_hint"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                android:src="@drawable/ic_email"
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/client_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/client_email"
                    android:hint="@string/client_form_email_hint"
                    android:maxLength="35"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/client_salvar_button"
            android:text="@string/salvar"
            android:layout_marginTop="40dp"
            style="@style/CustomButton"/>

        <Button
            android:id="@+id/client_deletar_button"
            android:layout_marginTop="15dp"
            style="@style/CustomButton.Delete"/>
    </LinearLayout>
</ScrollView>
