<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_edit_action_fragment"
    android:background="?android:attr/windowBackground"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                android:src="@drawable/ic_menu_user_action"
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_admin_name_layout"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_admin_name"
                    android:hint="@string/client_form_hint_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                android:src="@drawable/ic_phone"
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_admin_phone_layout"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_admin_phone"
                    android:hint="@string/client_form_telefone_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                android:src="@drawable/ic_email"
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_admin_email_layout"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_admin_email"
                    android:hint="@string/client_form_email_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            style="@style/CustomLinearLayout.Form">
            <ImageView
                style="@style/CustomImageView.Form"/>

            <TextView
                android:text="Status do Usuário: "
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <Spinner
                android:id="@+id/user_admin_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            style="@style/CustomLinearLayout.Form">
            <ImageView
                style="@style/CustomImageView.Form"/>

            <TextView
                android:text="Tipo do Usuário: "
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <Spinner
                android:id="@+id/user_admin_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <Button
            android:id="@+id/user_atualizar_button"
            android:text="@string/atualizar"
            android:layout_marginTop="40dp"
            style="@style/CustomButton"/>
    </LinearLayout>
</ScrollView>
