<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_edit_action_fragment"
    android:background="?android:attr/windowBackground"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                android:src="@drawable/ic_menu_user_action"
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:hint="@string/client_form_hint_name"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                android:src="@drawable/ic_phone"
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_phone"
                    android:hint="@string/client_form_telefone_hint"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/CustomLinearLayout.Form">
            <ImageView
                style="@style/CustomImageView.Form"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_password_layout"
                app:passwordToggleEnabled="true"
                app:helperText="Para trocar a senha basta digitar uma nova"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password"
                    android:hint="Senha"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/user_salvar_button"
            android:text="@string/salvar"
            android:layout_marginTop="40dp"
            style="@style/CustomButton"/>
    </LinearLayout>
</ScrollView>
